--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Upper Cumberland PRIDE
 description: An Organization in Cookeville, Tennessee
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.evernote.com/l/AAbeFWXWrctAf5ArQOLIVJ9Zrw_DneYNMF0B/image.png
 
 #
 # Flags below are optional
