--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Upper Cumberland PRIDE
 
 # Short bio or description (displayed in the header)
-description: An Organization in Cookeville, Tennessee
+description: Cookeville, Tennessee, and Surrounding Area
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://www.evernote.com/l/AAbeFWXWrctAf5ArQOLIVJ9Zrw_DneYNMF0B/image.png
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://www.ucpride.org
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
